# adventofcode

./: .gitmodules  CMakeLists.txt
2019/: CMakeLists.txt  main.cpp
2019/solutions/: IntCodeVM.cpp  IntCodeVM.hpp  day01.cpp  day02.cpp  day03.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day13.cpp
2020/: CMakeLists.txt  main.cpp
2020/solutions/: day02.cpp  day06.cpp  day07.cpp  day08.cpp  day10.cpp  day12.cpp  day17.cpp  day20.cpp  day21.cpp  day25.cpp
2021/: CMakeLists.txt  aoc.cpp  aoc.hpp  main.cpp
2021/solutions/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp
aoc2015/: CMakeLists.txt  main.cpp
aoc2015/data/: day25_solution.txt
aoc2015/solutions/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
aoc2016/: CMakeLists.txt  main.cpp
aoc2016/data/: day06_solution.txt  day09_solution.txt  day14_solution.txt  day17_solution.txt  day21_solution.txt
aoc2016/solutions/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp
aoc2019/solutions/: day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day08.cpp  day09.cpp  day12.cpp  day14.cpp
aoc2020/: CMakeLists.txt  main.cpp
aoc2020/solutions/: day01.cpp  day03.cpp  day04.cpp  day05.cpp  day09.cpp  day11.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day18.cpp  day19.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
aoc2021/: CMakeLists.txt  aoc.hpp
aoc2021/data/: day01_solution.txt  day02_solution.txt  day09_solution.txt  day13_solution.txt  day14_solution.txt  (+6 more)
aoc2022/: CMakeLists.txt  main.cpp
aoc2023/: CMakeLists.txt  main.cpp
aoc2023/data/: day01_solution.txt  day03_solution.txt  day05_solution.txt  day07_solution.txt  day13_solution.txt  day14_solution.txt  day16_solution.txt  day18_solution.txt  day20_solution.txt  day21_solution.txt  day22_solution.txt  day23_solution.txt  day24_solution.txt  day25_solution.txt
aoc2023/solutions/: BucketQueue.hpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
aoc2024/: CMakeLists.txt  main.cpp
(+69 files in other folders)
